<resources>
    <string name="app_name">HuaWu</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="accont_number">账号：</string>
    <string name="accont_password">密码：</string>
    <string name="remeber_passworld">记住密码</string>
    <string name="login">登录</string>
    <string name="loginfalse">登录失败</string>
    <string name="auto_login">自动登录</string>
    <string name="login_loading">登陆中</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登陆成功</string>
    <string name="login_register">注册账户</string>
    <string name="all_label">全部标签</string>
    <string name="login_name">用户名</string>
    //添加Strings
    <string name="content">内容</string>
    <string name="allTack">NEW</string>
    <string name="language">语言</string>
    <string name="aboutMe">关于我</string>
    <string name="mytack">我的话题</string>
    <string name="myAtantion">正在关注</string>
    <string name="Setting">设置</string>
    <string name="person_detail">预览个人资料</string>
    <string name="todo">TODO</string>
    <string name="camera_pop_camera">相机拍摄</string>
    <string name="camera_pop_album">从相册中选取</string>
    <string name="canera_pop_cancel">取消</string>
    <string name="name">姓名</string>
    <string name="country">中国</string>
    <string name="add_question_time">2天前</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="report">举报</string>
    <string name="time">1天前</string>
    <string name="question_peo_Name">王浩</string>
    <string name="question_detail">黄重谚在12日记者会上表示，经评估后，有四点不同意理由，包括： 马英九卸任不到一个月，仍有保密必要；马英九任内接触机密档案 资料尚需更多时间清查确认；香港为高度敏感地区， 台湾地区前领导人访港的风险难以管控；台湾安全部门与香港尚无合作先例</string>
    <string name="padd">展开</string>
    <string name="_12">黄重谚在12日记者会上表示，经评估后，有四点不同意理由，包括：马英九卸任不到一个月，仍有保密必要；马英九任内接触机密档案资料尚需更多时间清查确认；香港为高度敏感地区，台湾地区前领导人访港的风险难以管控；台湾安全部门与香港尚无合作先例。</string>
    <string name="title_activity_login_activitty">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button">登    陆</string>
    <string name="login_button_2">登 陆</string>
    <string name="contact_name">Alice</string>
    <string name="message_send">发送</string>
    <string name="ali_can">ALI CAN</string>
    <string name="Tag">请输入检索Tag</string>
    <string name="editTexthint">请输入搜索内容</string>
    <string name="online">在线</string>
    <string name="learn_language">english</string>
    <string name="mother_tongue">巴基斯坦</string>
    <string name="language_level">中级水平</string>
    <string name="new_learn">母语 :  </string>
    <string name="new_lraen">在学 : </string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>

    <string name="voice_seconds_tips">还可以说%1$s秒</string>

    <string name="voice_short_tips">录音时间太短</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_sign">个性签名</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>

    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>

    <string name="service_chat_gallery">相册</string>
    <string name="service_chat_camera">拍照</string>
    <string name="chat_emotion">表情</string>
    <string name="chat_send">发送</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>

    <string name="send_state">已读</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>

    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>

    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="dhaka">Dhaka</string>
    <string name="picture_1">Picture 1</string>
    <string name="just_text_1">just text 1</string>
    <string name="it_is_just_text">it is just text</string>
    <string name="search_1">Search</string>
    <string name="contact_name_1">白玉京</string>
    <string name="mingcheng">(名称)</string>
    <string name="now_learn">英语</string>
    <string name="contact_self_detail">兴趣爱好 : </string>
    <string name="contact_self_detial">学好数理化，走遍天下都不怕</string>
    <string name="all_detail">对他的印象 : </string>
    <string name="detail_11">学霸，英语小天才</string>
    <string name="detail_12">爱吃烧烤</string>
    <string name="detail_13">精力充沛，跑步爱好者</string>
    <string name="hint">问题链接 </string>
    <string name="attention">+ 关注</string>
    <string name="question_title">问题标题</string>
    <string name="question_detail_1">问题内容</string>
    <string name="add_question">添加问题</string>
    <string name="put_in_question">发表</string>
    <string name="response_name">Tom</string>
    <string name="response_answer">用户对该问题的回复</string>
    <string name="question_detail_actionBar">问题详情</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_recording">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="chat_location">位置</string>

    <string name="fab_exchange_map_normal">普通地图</string>
    <string name="fab_exchange_map_site">卫星地图</string>
    <string name="fab_exchange_model_common">一般模式</string>
    <string name="fab_exchange_model_compass">罗盘模式</string>

    //悬浮按钮
    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>

    <string name="text_detail">翻着我们的照片，想念若隐若现，去年的冬天，我们笑得很甜...... —— 哎哟，不错哦!</string>
    <string name="dynamic_time">10分钟前</string>

    <!-- 创建围栏子选项 -->
    <string name="fence_denoise">去噪参数（单位：米）</string>
    <string name="fence_radius">半径（单位：米）</string>
    <string name="fence_offset">偏离距离（单位：米）</string>
    <string name="alarm_condition">围栏报警条件</string>

    <!-- 创建围栏子选项默认值 -->
    <string name="denoise_hint">30</string>
    <string name="fence_radius_hint">100</string>
    <string name="offset_hint">200</string>
    <string name="vertexes_number_hint">3</string>
    <string name="fence_name_hint">myFence</string>


    <string name="fence_setting_title">围栏设置</string>
    <string name="fence_create_local_circle">创建本地圆形围栏</string>
    <string name="fence_create_server_circle">创建服务端圆形围栏</string>
    <string name="fence_create_polyline">创建多段线围栏</string>
    <string name="fence_create_polygon">创建多边形围栏</string>

    <string name="skip">跳过</string>
    <string name="complete">完成</string>
    <string name="player_achievement">成就</string>
    <string name="player_shop">商店</string>
    <string name="player_help">帮助</string>
    <string name="app_about">关于</string>

   //商店
    <string name="title_1">提示卡</string>
    <string name="title_2">藏点图</string>
    <string name="title_3">成就碎片1</string>
    <string name="title_4">成就碎片2</string>

    <string name="text_1">作用：提示藏点信息</string>
    <string name="text_2">作用：直接显示藏点</string>
    <string name="text_3">作用：解锁成就1</string>
    <string name="text_4">作用：解锁成就2</string>


    <string name="coin_1">100</string>
    <string name="coin_2">500</string>
    <string name="coin_3">1000</string>
    <string name="coin_4">2000</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex">性别：</string>


</resources>
