<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/slideshow" android:checkableBehavior="single">
        <item
            android:id="@+id/player_achievement"
            android:title="@string/player_achievement" />
    </group>
    <group android:id="@+id/manage" android:checkableBehavior="single">
        <item
            android:id="@+id/player_shop"
            android:title="@string/player_shop" />
    </group>

    <item android:title="教程">
        <menu>
            <item
                android:id="@+id/player_help"
                android:title="@string/player_help" />
            <item
                android:id="@+id/app_about"
                android:title="@string/app_about" />
        </menu>
    </item>

</menu>
