<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="40dp"
    android:paddingTop="100dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/accont_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accont_number"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/accont_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textCursorDrawable="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/accont_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accont_password"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/accont_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <CheckBox
            android:id="@+id/remeber_passworld_checkBox"
            style="@style/CheckBoxTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:duplicateParentState="false"
            android:text="@string/remeber_passworld"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:paddingRight="80dp"/>

        <CheckBox
            android:id="@+id/auto_login_checkBox"
            style="@style/CheckBoxTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:duplicateParentState="false"
            android:text="@string/auto_login"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login"
        app:pb_textError="@string/login_fail"
        app:pb_textComplete="@string/login_success"
        app:pb_textProgress="@string/login_loading"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/login_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>